fix :bug: : dark mode

--- a/src/playground/playground.css
+++ b/src/playground/playground.css
@@ -13,7 +13,6 @@
   padding: 0;
   display: flex;
   flex-direction: row;
-  border: 1px sloid black;
 }
 
 .key {
@@ -23,12 +22,21 @@
   padding: 10px;
   text-align: center;
   font-size: x-large;
-
-  background-color: white;
+  -webkit-user-select: none;
+  user-select: none;
+  background-color: transparent;
   border-radius: 5px;
   box-shadow: 1px 1px 2px grey;
 }
 
+[data-prefers-color="dark"] .key {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
 .key-active {
   background-color: rgba(0, 0, 0, 0.1);
+}
+
+[data-prefers-color="dark"] .key-active {
+  background-color: rgba(255, 255, 255, 0.2);
 }
